2008-04-04  Jon Honeycutt  <jhoneycutt@apple.com>

        Reviewed by Oliver.

        Replace AccessibilityObject::isRenderImage() with a virtual
        RenderObject::isRenderImage().

        * page/AccessibilityObject.cpp:
        (WebCore::AccessibilityObject::accessibilityIsIgnored):
        (WebCore::AccessibilityObject::addChildren):
        * page/AccessibilityObject.h:
        (WebCore::AccessibilityObject::isDetached):
        * rendering/RenderImage.h:
        (WebCore::RenderImage::isRenderImage):
        * rendering/RenderObject.h:
        (WebCore::RenderObject::isRenderImage):

2008-04-04  Dan Bernstein  <mitz@apple.com>

        - try to fix the wx build

        * platform/graphics/wx/FontPlatformDataWx.cpp:
        (WebCore::fontWeightToWxFontWeight):
        (WebCore::FontPlatformData::FontPlatformData):

2008-04-04  Jon Honeycutt  <jhoneycutt@apple.com>

        Reviewed by Beth.

        Some more clean-up of AccessibilityObject:
        - Rearranged/grouped methods.
        - Marked many methods const.
        - Changed many methods to take args by const ref instead of by val.
        - Made headingLevel() static.
        - Renamed detached() to isDetached(), loaded() to isLoaded(),
          documentLinks to getDocumentLinks().
        - Made clearChildren(), removeAXObjectID(), isDetached() private.
        - Added notImplemented() calls for unimplemented methods.
        - Replaced stringForReplacedNode method with static function.

        * page/AccessibilityObject.cpp:
        (WebCore::AccessibilityObject::~AccessibilityObject):
        (WebCore::AccessibilityObject::firstChild):
        (WebCore::AccessibilityObject::lastChild):
        (WebCore::AccessibilityObject::previousSibling):
        (WebCore::AccessibilityObject::nextSibling):
        (WebCore::AccessibilityObject::parentObject):
        (WebCore::AccessibilityObject::parentObjectUnignored):
        (WebCore::AccessibilityObject::headingLevel):